# python-code-check-system

./: .editorconfig  .flake8  .gitignore  .pylintrc  LICENSE  Makefile  NGINX_SETUP.md  README.md  cookies.txt  docker-compose.test.yml  docker-compose.yaml  env.example  nginx.conf  notice.md  pyproject.toml  requirements.txt  setup-nginx.sh
.github/: README.md
.github/workflows/: core-tests.yml  deploy.yml  django-test.yml  django-tests.yml  docker-image.yml  docker-tests.yml  full-test-suite.yml  linter.yml  python-app.yml  security.yml
data/: data3.in  data4.in  data5.in
docker-inside-docker/: Dockerfile  Dockerfile_child  notes.md
fastapi-react-app/: .gitignore  DEVELOPMENT.md  QUICKSTART.md  README.md  START.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  setup-dev.sh  start-backend.sh  start-db.sh  start-frontend.sh  start.sh
fastapi-react-app/backend/: Dockerfile  alembic.ini  init_db.py  migrate.py  pyproject.toml
fastapi-react-app/backend/alembic/: env.py
fastapi-react-app/backend/app/: main.py
fastapi-react-app/backend/app/api/api_v1/: api.py
fastapi-react-app/backend/app/api/api_v1/endpoints/: auth.py  solutions.py  tasks.py  users.py
fastapi-react-app/backend/app/core/: config.py
fastapi-react-app/backend/app/models/: __init__.py  solution.py  task.py  user.py
fastapi-react-app/backend/app/schemas/: __init__.py  solution.py  task.py  user.py
fastapi-react-app/backend/app/services/: __init__.py  auth.py  code_checker.py
fastapi-react-app/frontend/: package-lock.json  package.json
fastapi-react-app/frontend/src/: App.css  App.tsx  App.tsx.bak
poc/: memory.py  timeout.py
src/: FunctionUsageException_block.py  TestsEgor.py  check.py  core.py  exceptions.py  import_exception.py  main.py  mainEgor.py  memory_exception.py  module_test.py  open.py  temp_main.py  temp_main2.py  test_core.py  timeout_exception.py  utils.py
src/FileProject/: main.py
src/class_test/: Student_code.py  Test.py  test_class.py
src/pythonProject/: Test_znachenya.txt  Tests.py  main.py
umschool/: .dockerignore  Dockerfile  dump.rdb  entrypoint.sh  entrypoint.test.sh  manage.py  requirements.txt  test.db  test_settings.py
umschool/account_service/: admin.py  forms.py  models.py  urls.py  views.py
umschool/python_code_check_system/: admin.py  apps.py  exceptions.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
umschool/tasks/: urls.py  views.py
umschool/umschool/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+84 files in other folders)
